# MCImail

./: .clang-format  .gitignore  .gitmodules  README.md  meson.build
include/: address.hpp  date.hpp  email_message.hpp  file_utils.hpp  lmdb++.h  mail_store.hpp  mep2_errors.hpp  mep2_pdu.hpp  mep2_pdu_parser.hpp  string_utils.hpp  temporary_storage.hpp  trie.hpp
src/: address.cpp  date.cpp  mail_store.cpp  mep2_pdu.cpp  mep2_pdu_parser.cpp  serverv2.c  string_utils.cpp  temporary_storage.cpp
subprojects/: lmdb.wrap
test/: FAKESHAR.TXT  fuzz_date.cpp  fuzz_parser.cpp  fuzz_stringdecode.cpp  test.cpp
